# toy-stl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/my_std/: vector.hpp
src/toy_sdl/: algorithm.hpp  const_iterator.hpp  deque.hpp  deque_data.hpp  deque_iterator.hpp  iterator.hpp  reverse_iterator.hpp  vector.hpp  vector_iterator.hpp
src/toy_stl/: algorithm.hpp  deque.hpp  deque_data.hpp  deque_iterator.hpp  iterator.hpp  vector_const_iterator.hpp
tests/deque/: comparisons.cpp  constructors.cpp  element_access.cpp  modifiers.cpp
tests/deque/iterators/: const_iterator.cpp  const_reverse_iterator.cpp  iterator.cpp  reverse_iterator.cpp
tests/deque/modifiers/: back.cpp
tests/vector/: vector.cpp
